--- a/zanzhu.html
+++ b/zanzhu.html
@@ -91,7 +91,7 @@
             z-index: 1;
         }
 
-        .search-section {
+        。search-section {
             background: white;
             padding: 2rem 0;
             box-shadow: var(--shadow-sm);
@@ -384,7 +384,7 @@
             animation: fadeInUp 0.6s ease-out;
         }
 
-        .provider-card:nth-child(1) { animation-delay: 0.1s; }
+        。provider-card:nth-child(1) { animation-delay: 0.1s; }
         .provider-card:nth-child(2) { animation-delay: 0.2s; }
         .provider-card:nth-child(3) { animation-delay: 0.3s; }
     </style>
@@ -475,7 +475,7 @@
                 </ul>
                 <h3>申请联系方式：</h3>
                 <div class="contact-info">
-                    <a href="https://t.me/WiseAidBot" class="learn-more" target="_blank">
+                    <a href="https://t.me/RelayHubBot" class="learn-more" target="_blank">
                         <i class="fab fa-telegram"></i>
                         点击咨询
                     </a>
